--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -10,7 +10,7 @@
   display: grid;
   grid-template-columns: 1fr;
 
-  .banner__title {
+  &__title {
     font-style: normal;
     font-weight: 400;
     font-size: 44px;
@@ -25,7 +25,7 @@
     }
   }
 
-  .banner__subtitle {
+  &__subtitle {
     font-style: normal;
     font-weight: 400;
     font-size: 15px;
@@ -45,7 +45,7 @@
     }
   }
 
-  .banner__buttonsList {
+  &__buttonsList {
     padding: 0;
     margin: 22px auto 618px;
     list-style-type: none;
