--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -14,8 +14,8 @@
   text-align: center;
   padding: 5px 0;
   width: 200px;
-}
 
-.button:hover {
-  @include hover;
+  &:hover {
+    @include hover;
+  }
 }
