--- a/src/components/FaqList/FaqList.module.scss
+++ b/src/components/FaqList/FaqList.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   color: $fontColorDark;
 
-    .faq__list {
+    &__list {
       display: grid;
       padding: 0;
       list-style-type: none;
