--- a/src/components/Accessories/Accessories.module.scss
+++ b/src/components/Accessories/Accessories.module.scss
@@ -35,18 +35,18 @@
     text-align: center;
     color: $fontColorDark;
     margin: 54px auto 0;
+
+    &::after {
+      content: '';
+      box-sizing: border-box;
+      border-bottom: solid 2px #cfcfcf;
+      width: 70px;
+      display: block;
+      margin: 22px auto 0;
+    }
   }
 
-  .title::after {
-    content: '';
-    box-sizing: border-box;
-    border-bottom: solid 2px #cfcfcf;
-    width: 70px;
-    display: block;
-    margin: 22px auto 0;
-  }
-
-  .accessories__list {
+  &__list {
     width: 100%;
     max-width: 1440px;
     margin-top: 40px;
@@ -59,12 +59,12 @@
     grid-template-columns: 1fr;
     justify-items: center;
 
-    .accessory__img {
+    &__img {
       width: 186px;
       height: 186px;
     }
 
-    .accessory__name {
+    &__name {
       font-style: normal;
       font-weight: 400;
       font-size: 15px;
@@ -76,16 +76,16 @@
       margin: 13px auto 0;
     }
 
-    .accessory__link {
+    &__link {
       color: inherit;
       text-decoration: none;
     }
 
-    .accessory__link:hover {
+    &__link:hover {
       @include hover;
     }
 
-    .accessory__price {
+    &__price {
       display: block;
       text-align: center;
       color: #373737;
@@ -94,20 +94,20 @@
       margin: 5px auto 0;
     }
 
-    .accessory__price_hidden {
+    &__price_hidden {
       display: none;
     }
 
-    .accessory__otherPrice {
+    &__otherPrice {
       display: none;
       color: #FF4A32;
     }
 
-    .accessory__otherPrice_visible {
+    &__otherPrice_visible {
       display: inline;
     }
 
-    .accessory__availability {
+    &__availability {
       display: none;
       margin: 5px auto 0;
       font-style: normal;
@@ -118,7 +118,7 @@
       color: rgba(0, 0, 0, 0.3);
     }
 
-    .accessory__availability_visible {
+    &__availability_visible {
       display: block;
     }
   }
