--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -15,7 +15,7 @@
     grid-template-columns: 1fr;
   }
 
-  .cart__title {
+  &__title {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
     margin: 0 0 30px;
@@ -28,24 +28,24 @@
     }
   }
 
-  .cart__content {
+  &__content {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
+  }
 
-    .cart__list {
-      margin: 0 0 0 20px;
-      padding: 0;
-      list-style-type: none;
-      display: grid;
-      row-gap: 20px;
+  &__list {
+    margin: 0 0 0 20px;
+    padding: 0;
+    list-style-type: none;
+    display: grid;
+    row-gap: 20px;
 
-      @include media_740 {
-        margin: 0 20px;
-      }
+    @include media_740 {
+      margin: 0 20px;
     }
   }
 
-  .cart__result {
+  &__result {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     display: flex;
@@ -56,47 +56,47 @@
       grid-column: 1 / 2;
       grid-row: 3 / 4;
     }
+  }
 
-    .cart__subtitle {
-      margin: 0;
-      padding: 0;
-      font-size: 24px;
+  &__subtitle {
+    margin: 0;
+    padding: 0;
+    font-size: 24px;
+  }
+
+  &__sum {
+    font-size: 22px;
+    margin: 20px 0 0;
+    padding: 0;
+  }
+
+  &__button {
+    margin-top: 20px;
+    width: 250px;
+    align-self: center;
+    color: #232323;
+    background: transparent;
+    border: 1px solid #232323;
+    position: relative;
+    font-size: 14px;
+    letter-spacing: .3em;
+    transition: .2s ease-in-out;
+    padding: 15px 35px;
+
+    @include media_930 {
+      width: 150px;
+      padding: 10px 20px;
     }
 
-    .cart__sum {
-      font-size: 22px;
-      margin: 20px 0 0;
-      padding: 0;
+    @include media_740 {
+      width: 200px;
     }
 
-    .cart__button {
-      margin-top: 20px;
-      width: 250px;
-      align-self: center;
-      color: #232323;
-      background: transparent;
-      border: 1px solid #232323;
-      position: relative;
-      font-size: 14px;
-      letter-spacing: .3em;
-      transition: .2s ease-in-out;
-      padding: 15px 35px;
-
-      @include media_930 {
-        width: 150px;
-        padding: 10px 20px;
-      }
-
-      @include media_740 {
-        width: 200px;
-      }
-    }
-
-    .cart__button:hover {
+    &:hover {
       cursor: pointer;
     }
 
-    .cart__button:before {
+    &:before {
       content: '';
       position: absolute;
       top: 5px;
@@ -108,7 +108,8 @@
       transition: .25s ease;
       transform: translate(0, 0);
     }
-    .cart__button:hover:before {
+
+    &:hover:before {
       transform: translate(4px, 4px);
     }
   }
