--- a/src/components/Catalog/Catalog.module.scss
+++ b/src/components/Catalog/Catalog.module.scss
@@ -5,7 +5,7 @@
   grid-template-columns: 1fr;
   width: 100%;
 
-  .catalog__title {
+  &__title {
     text-align: center;
     margin: 0;
     padding: 0;
@@ -15,7 +15,7 @@
     }
   }
 
-  .catalog__list {
+  &__list {
     margin: 25px 0 0;
     padding: 0;
     list-style-type: none;
