--- a/src/components/ErrorMessage/ErrorMessage.module.scss
+++ b/src/components/ErrorMessage/ErrorMessage.module.scss
@@ -3,8 +3,8 @@
   display: none;
   margin: 0;
   padding: 0;
-}
 
-.errorMessage_visible {
-  display: block;
+  &_visible {
+    display: block;
+  }
 }
