--- a/src/components/ItemBoostedShop/ItemBoostedShop.module.scss
+++ b/src/components/ItemBoostedShop/ItemBoostedShop.module.scss
@@ -62,9 +62,9 @@
     @include media_590 {
       margin-bottom: 50px;
     }
-  }
 
-  .linksList__link:hover {
-    @include hover;
+    &:hover {
+      @include hover;
+    }
   }
 }
