--- a/src/components/ItemShop/ItemShop.module.scss
+++ b/src/components/ItemShop/ItemShop.module.scss
@@ -44,9 +44,9 @@
     @include media_1200 {
       margin-bottom: 70px;
     }
-  }
 
-  .linksList__link:hover {
-    @include hover;
+    &:hover {
+      @include hover;
+    }
   }
 }
