--- a/src/components/SoloItem/SoloItem.module.scss
+++ b/src/components/SoloItem/SoloItem.module.scss
@@ -12,6 +12,7 @@
     position: relative;
     background-color: transparent;
     padding: 5px 10px;
+    margin-left: 10px;
     color: #ed8530;
     border: 1px solid #2c2c2b;
     font-size: 12px;
